--- a/src/scripts/data/assets/index.yaml
+++ b/src/scripts/data/assets/index.yaml
@@ -359,6 +359,12 @@ buildings:
     - toroca/no-radiation-rewards
   '04433758':
     - pegasus/spam
+  0480646d:
+    - madhatter106/midrise-office-pack-vol07
+  '04806623':
+    - madhatter106/midrise-office-pack-vol07
+  '04806664':
+    - madhatter106/midrise-office-pack-vol07
   '04840000':
     - maxis/luckys-hang-ten
   '04850000':
@@ -547,6 +553,10 @@ buildings:
     - 11241036/seasonal-woods-2
   '05720000':
     - toroca/commercial-services-doubler
+  05b1ebdf:
+    - madhatter106/midrise-office-pack-vol08
+  05b1ed08:
+    - madhatter106/midrise-office-pack-vol08
   05b50000:
     - toroca/commercial-services-doubler
   05b70000:
@@ -1211,12 +1221,18 @@ buildings:
     - pegasus/spam
   2348d63f:
     - pegasus/spam
+  248063d0:
+    - madhatter106/midrise-office-pack-vol07
+  '248064e7':
+    - madhatter106/midrise-office-pack-vol07
   2481440c:
     - wannglondon/raven-hollow-inn
   25351d94:
     - 11241036/seasonal-woods-2
   2570a3e1:
     - 11241036/seasonal-woods-2
+  25b1ef3f:
+    - madhatter106/midrise-office-pack-vol08
   275c0c91:
     - pegasus/spam
   '27832671':
@@ -1451,10 +1467,18 @@ buildings:
     - wannglondon/ancient-ampitheater
   43a07361:
     - pegasus/spam
+  4480649e:
+    - madhatter106/midrise-office-pack-vol07
+  '44806517':
+    - madhatter106/midrise-office-pack-vol07
+  448066da:
+    - madhatter106/midrise-office-pack-vol07
   '45351e35':
     - 11241036/seasonal-woods-2
   4570a415:
     - 11241036/seasonal-woods-2
+  45b1ec81:
+    - madhatter106/midrise-office-pack-vol08
   '47832244':
     - 11241036/seasonal-woods-2
   4ce60e32:
@@ -1645,6 +1669,8 @@ buildings:
     - ripplejet/census-repository-building
   6471f58b:
     - ripplejet/census-repository-building
+  '64806405':
+    - madhatter106/midrise-office-pack-vol07
   65351d9e:
     - 11241036/seasonal-woods-2
   678322aa:
@@ -1843,12 +1869,18 @@ buildings:
     - jasoncw/elviras-halloween-emporium
   8160026c:
     - pegasus/spam
+  '84806380':
+    - madhatter106/midrise-office-pack-vol07
   8570a365:
     - 11241036/seasonal-woods-2
   8570a4bf:
     - 11241036/seasonal-woods-2
   '85720451':
     - 11241036/seasonal-woods-2
+  85b1edc3:
+    - madhatter106/midrise-office-pack-vol08
+  85b1ee1f:
+    - madhatter106/midrise-office-pack-vol08
   '87832501':
     - 11241036/seasonal-woods-2
   89bf334a:
@@ -2042,8 +2074,16 @@ buildings:
     - jasoncw/centron-center
   a42c8861:
     - pegasus/spam
+  a48065d0:
+    - madhatter106/midrise-office-pack-vol07
+  a480669a:
+    - madhatter106/midrise-office-pack-vol07
   a5351d45:
     - 11241036/seasonal-woods-2
+  a5b1eeb4:
+    - madhatter106/midrise-office-pack-vol08
+  a5b1ef6f:
+    - madhatter106/midrise-office-pack-vol08
   a7832651:
     - 11241036/seasonal-woods-2
   a88725e2:
@@ -2207,6 +2247,8 @@ buildings:
     - 11241036/seasonal-woods
   c2ab5f77:
     - csx/mega-props-vol05
+  c480642b:
+    - madhatter106/midrise-office-pack-vol07
   c570a47c:
     - 11241036/seasonal-woods-2
   c68a5f77:
@@ -2400,6 +2442,8 @@ buildings:
     - 11241036/seasonal-woods
   e2b0b7a5:
     - pegasus/spam
+  e480654e:
+    - madhatter106/midrise-office-pack-vol07
   e5351d66:
     - 11241036/seasonal-woods-2
   e570a2ac:
@@ -2570,6 +2614,22 @@ lots:
     - jasoncw/otautahi-mews
   02a5de88:
     - jasoncw/newport-house
+  '04815e12':
+    - madhatter106/midrise-office-pack-vol07
+  0481656b:
+    - madhatter106/midrise-office-pack-vol07
+  0481e44e:
+    - madhatter106/midrise-office-pack-vol07
+  0481e6a6:
+    - madhatter106/midrise-office-pack-vol07
+  0481eb7c:
+    - madhatter106/midrise-office-pack-vol07
+  0483df9a:
+    - madhatter106/midrise-office-pack-vol07
+  0483dfea:
+    - madhatter106/midrise-office-pack-vol07
+  0486d252:
+    - madhatter106/midrise-office-pack-vol07
   04c20482:
     - wannglondon/mid-century-modern-homes-pack
   05351d9a:
@@ -2578,6 +2638,16 @@ lots:
     - 11241036/seasonal-woods-2
   0570a396:
     - 11241036/seasonal-woods-2
+  05b5b431:
+    - madhatter106/midrise-office-pack-vol08
+  05b5b503:
+    - madhatter106/midrise-office-pack-vol08
+  05b5b678:
+    - madhatter106/midrise-office-pack-vol08
+  05b74ef5:
+    - madhatter106/midrise-office-pack-vol08
+  05b74f51:
+    - madhatter106/midrise-office-pack-vol08
   068a5f9e:
     - 11241036/seasonal-woods-2
   073dc000:
@@ -2754,10 +2824,36 @@ lots:
     - wannglondon/tower-4
   2481440c:
     - wannglondon/raven-hollow-inn
+  24815bd5:
+    - madhatter106/midrise-office-pack-vol07
+  '24815e37':
+    - madhatter106/midrise-office-pack-vol07
+  2481e16f:
+    - madhatter106/midrise-office-pack-vol07
+  2481e6c7:
+    - madhatter106/midrise-office-pack-vol07
+  2486d403:
+    - madhatter106/midrise-office-pack-vol07
+  2486d675:
+    - madhatter106/midrise-office-pack-vol07
   25351d94:
     - 11241036/seasonal-woods-2
   2570a3e1:
     - 11241036/seasonal-woods-2
+  25b5b262:
+    - madhatter106/midrise-office-pack-vol08
+  25b5b46f:
+    - madhatter106/midrise-office-pack-vol08
+  25b5b4dc:
+    - madhatter106/midrise-office-pack-vol08
+  25b5b56d:
+    - madhatter106/midrise-office-pack-vol08
+  25b5b596:
+    - madhatter106/midrise-office-pack-vol08
+  25b5b60c:
+    - madhatter106/midrise-office-pack-vol08
+  25b5b6ee:
+    - madhatter106/midrise-office-pack-vol08
   '27832671':
     - 11241036/seasonal-woods-2
   278a3d53:
@@ -2916,12 +3012,52 @@ lots:
     - wannglondon/ancient-ampitheater
   43a07361:
     - pegasus/spam
+  44813cd9:
+    - madhatter106/midrise-office-pack-vol07
+  '44813e76':
+    - madhatter106/midrise-office-pack-vol07
+  4481583a:
+    - madhatter106/midrise-office-pack-vol07
+  44815ec8:
+    - madhatter106/midrise-office-pack-vol07
+  44815f2f:
+    - madhatter106/midrise-office-pack-vol07
+  4481df85:
+    - madhatter106/midrise-office-pack-vol07
+  '4481e262':
+    - madhatter106/midrise-office-pack-vol07
+  4481e27e:
+    - madhatter106/midrise-office-pack-vol07
+  '4481e644':
+    - madhatter106/midrise-office-pack-vol07
+  4481e9dc:
+    - madhatter106/midrise-office-pack-vol07
+  4483df43:
+    - madhatter106/midrise-office-pack-vol07
+  4483e08b:
+    - madhatter106/midrise-office-pack-vol07
+  '4483e130':
+    - madhatter106/midrise-office-pack-vol07
+  4483e16a:
+    - madhatter106/midrise-office-pack-vol07
+  '4483e333':
+    - madhatter106/midrise-office-pack-vol07
   449943cb:
     - wannglondon/american-rowhome-8
   '45351e35':
     - 11241036/seasonal-woods-2
   4570a415:
     - 11241036/seasonal-woods-2
+  45b5b08f:
+    - madhatter106/midrise-office-pack-vol08
+  45b5b384:
+    - madhatter106/midrise-office-pack-vol08
+  45b5b4a2:
+    - madhatter106/midrise-office-pack-vol08
+  45b74fec:
+    - madhatter106/midrise-office-pack-vol08
+  45b75005:
+    - madhatter106/midrise-office-pack-vol08
   '47832244':
     - 11241036/seasonal-woods-2
   4ac40971:
@@ -3032,10 +3168,46 @@ lots:
     - ripplejet/census-repository-building
   6471f58b:
     - ripplejet/census-repository-building
+  64813d11:
+    - madhatter106/midrise-office-pack-vol07
+  '64815877':
+    - madhatter106/midrise-office-pack-vol07
+  '64815899':
+    - madhatter106/midrise-office-pack-vol07
+  648158d3:
+    - madhatter106/midrise-office-pack-vol07
+  6481601b:
+    - madhatter106/midrise-office-pack-vol07
+  '6481e075':
+    - madhatter106/midrise-office-pack-vol07
+  6481e3d0:
+    - madhatter106/midrise-office-pack-vol07
+  6481ea15:
+    - madhatter106/midrise-office-pack-vol07
+  '6483e106':
+    - madhatter106/midrise-office-pack-vol07
+  6483e2e3:
+    - madhatter106/midrise-office-pack-vol07
+  6486d633:
+    - madhatter106/midrise-office-pack-vol07
   649844c1:
     - wannglondon/american-rowhome-8
   65351d9e:
     - 11241036/seasonal-woods-2
+  65b5b0b5:
+    - madhatter106/midrise-office-pack-vol08
+  65b5b243:
+    - madhatter106/midrise-office-pack-vol08
+  65b5b455:
+    - madhatter106/midrise-office-pack-vol08
+  65b5b62b:
+    - madhatter106/midrise-office-pack-vol08
+  65b5b718:
+    - madhatter106/midrise-office-pack-vol08
+  65b74f37:
+    - madhatter106/midrise-office-pack-vol08
+  65b74f73:
+    - madhatter106/midrise-office-pack-vol08
   678322aa:
     - 11241036/seasonal-woods-2
   678324cf:
@@ -3160,6 +3332,30 @@ lots:
     - jasoncw/elks-building
   826f8c9d:
     - wannglondon/american-rowhomes-pack-1
+  84813c5a:
+    - madhatter106/midrise-office-pack-vol07
+  84813ddd:
+    - madhatter106/midrise-office-pack-vol07
+  84813dec:
+    - madhatter106/midrise-office-pack-vol07
+  848157ba:
+    - madhatter106/midrise-office-pack-vol07
+  848158f4:
+    - madhatter106/midrise-office-pack-vol07
+  8481593f:
+    - madhatter106/midrise-office-pack-vol07
+  84815c1a:
+    - madhatter106/midrise-office-pack-vol07
+  84815f51:
+    - madhatter106/midrise-office-pack-vol07
+  8481e48b:
+    - madhatter106/midrise-office-pack-vol07
+  8483e0b4:
+    - madhatter106/midrise-office-pack-vol07
+  8483e1da:
+    - madhatter106/midrise-office-pack-vol07
+  8486d6fc:
+    - madhatter106/midrise-office-pack-vol07
   84c08403:
     - wannglondon/mid-century-modern-homes-pack
   84c9c497:
@@ -3170,6 +3366,16 @@ lots:
     - 11241036/seasonal-woods-2
   '85720451':
     - 11241036/seasonal-woods-2
+  85b5b3a9:
+    - madhatter106/midrise-office-pack-vol08
+  85b5b40d:
+    - madhatter106/midrise-office-pack-vol08
+  85b5b5bd:
+    - madhatter106/midrise-office-pack-vol08
+  85b5b65a:
+    - madhatter106/midrise-office-pack-vol08
+  85b5b75d:
+    - madhatter106/midrise-office-pack-vol08
   '87832501':
     - 11241036/seasonal-woods-2
   8af9d28c:
@@ -3340,8 +3546,36 @@ lots:
     - wannglondon/american-rowhomes-pack-1
   a2ce4251:
     - wannglondon/san-francisco-buildings-1
+  a4813e37:
+    - madhatter106/midrise-office-pack-vol07
+  a4815a67:
+    - madhatter106/midrise-office-pack-vol07
+  a4815b43:
+    - madhatter106/midrise-office-pack-vol07
+  a4815b8a:
+    - madhatter106/midrise-office-pack-vol07
+  a4815fa3:
+    - madhatter106/midrise-office-pack-vol07
+  a481df5e:
+    - madhatter106/midrise-office-pack-vol07
+  a481e09c:
+    - madhatter106/midrise-office-pack-vol07
+  a481e5b9:
+    - madhatter106/midrise-office-pack-vol07
+  a481e5d7:
+    - madhatter106/midrise-office-pack-vol07
+  a481e6e2:
+    - madhatter106/midrise-office-pack-vol07
+  a481e9a5:
+    - madhatter106/midrise-office-pack-vol07
+  a486d8d3:
+    - madhatter106/midrise-office-pack-vol07
   a5351d45:
     - 11241036/seasonal-woods-2
+  a5b5b169:
+    - madhatter106/midrise-office-pack-vol08
+  a5b5b4c1:
+    - madhatter106/midrise-office-pack-vol08
   a7832651:
     - 11241036/seasonal-woods-2
   a9270458:
@@ -3428,8 +3662,22 @@ lots:
     - wannglondon/los-angeles-home-pack-1
   c3e9d565:
     - wannglondon/los-angeles-home-pack-1
+  c4815cf8:
+    - madhatter106/midrise-office-pack-vol07
+  c4815da2:
+    - madhatter106/midrise-office-pack-vol07
   c570a47c:
     - 11241036/seasonal-woods-2
+  c5b5b110:
+    - madhatter106/midrise-office-pack-vol08
+  c5b5b218:
+    - madhatter106/midrise-office-pack-vol08
+  c5b5b284:
+    - madhatter106/midrise-office-pack-vol08
+  c5b5b358:
+    - madhatter106/midrise-office-pack-vol08
+  c5b5b5da:
+    - madhatter106/midrise-office-pack-vol08
   c68a5f77:
     - 11241036/seasonal-woods-2
   c78323c0:
@@ -3580,6 +3828,24 @@ lots:
     - wannglondon/american-rowhomes-pack-1
   e2a6032a:
     - jasoncw/basildon-terraces
+  e4813ca7:
+    - madhatter106/midrise-office-pack-vol07
+  e4815aea:
+    - madhatter106/midrise-office-pack-vol07
+  e4815fd4:
+    - madhatter106/midrise-office-pack-vol07
+  e48165bc:
+    - madhatter106/midrise-office-pack-vol07
+  e481e1a1:
+    - madhatter106/midrise-office-pack-vol07
+  e481e3a0:
+    - madhatter106/midrise-office-pack-vol07
+  e483e20c:
+    - madhatter106/midrise-office-pack-vol07
+  e483e24e:
+    - madhatter106/midrise-office-pack-vol07
+  e486d8d9:
+    - madhatter106/midrise-office-pack-vol07
   e4d095a1:
     - wannglondon/apartments-3
   e5351d66:
@@ -3590,6 +3856,14 @@ lots:
     - 11241036/seasonal-woods-2
   e5749050:
     - 11241036/seasonal-woods-2
+  e5b5b3db:
+    - madhatter106/midrise-office-pack-vol08
+  e5b5b73f:
+    - madhatter106/midrise-office-pack-vol08
+  e5b74f17:
+    - madhatter106/midrise-office-pack-vol08
+  e5b7502a:
+    - madhatter106/midrise-office-pack-vol08
   e78323b2:
     - 11241036/seasonal-woods-2
   e7832489:
