--- a/src/scripts/data/assets/overrides.yaml
+++ b/src/scripts/data/assets/overrides.yaml
@@ -1893,6 +1893,10 @@ simtropolis/31112-clerkenwell-close-hd-maxis-night:
   packageId: bombardiere/clerkenwell-close-dependencies
   variantId: hd-maxisnite
 
+simtropolis/31161-midrise-office-pack-volume-7:
+  packageId: madhatter106/midrise-office-pack-vol07
+  variantId: default
+
 simtropolis/31162-paengs-streetside-diagonal-parking-ssdp:
   packageId: paeng/streetside-diagonal-parking
 
@@ -1965,6 +1969,10 @@ simtropolis/31425-m93-kosc-supershk-retextures-for-veredas-sudden-valley:
 
 simtropolis/31431-sm2-mobile-power-generator:
   packageId: simmer2/mobile-power-generator
+
+simtropolis/31505-midrise-office-pack-volume-8:
+  packageId: madhatter106/midrise-office-pack-vol08
+  variantId: default
 
 simtropolis/31578-kosc-logistics-essentials-dec-2018-update:
   packageId: kingofsimcity/logistics-essentials
