--- a/src/scripts/data/assets/overrides.yaml
+++ b/src/scripts/data/assets/overrides.yaml
@@ -1479,6 +1479,10 @@ simtropolis/27340-space-port-fix-mod:
       variantId: default
   variantId: default,alternate
 
+simtropolis/27647-midrise-office-pack-volume-3:
+  packageId: madhatter106/midrise-office-pack-vol03
+  variantId: default
+
 simtropolis/27675-sc4datanode: null
 
 simtropolis/27698-murimk-props-vol03-industrials:
@@ -1521,6 +1525,10 @@ simtropolis/28048-gnl-eha-villa-de-vinho:
 
 simtropolis/28268-industrial-revolution-mod-base-pack-maxis-lots:
   packageId: t-wrecks/industrial-revolution-mod
+
+simtropolis/28316-midrise-office-pack-volume-4:
+  packageId: madhatter106/midrise-office-pack-vol04
+  variantId: default
 
 simtropolis/28343-gnl-eha-azuleijitos-apartment:
   packageId: gn-leugim/azuleijitos-apartment
@@ -1656,6 +1664,10 @@ simtropolis/30076-b62-remastered-target-supercenter:
     '202832':
       variantId: default
 
+simtropolis/30077-midrise-office-pack-volume-5:
+  packageId: madhatter106/midrise-office-pack-vol05
+  variantId: default
+
 simtropolis/30114-nos17-essentials:
   packageId: nos-17/essentials
 
@@ -1684,6 +1696,10 @@ simtropolis/30151-b62-remastered-k-mart-super-center:
       variantId: default
 
 simtropolis/30159-mgb-terrain-grass-nam-tgn-for-gobias-berner-oberland: null
+
+simtropolis/30160-minnies-maxi-mart:
+  packageId: madhatter106/minnies-maxi-mart
+  variantId: default
 
 simtropolis/30162-mgb-terrain-grass-nam-tgn-for-gobias-sudden-valley: null
 
@@ -1779,6 +1795,10 @@ simtropolis/30835-b62-remastered-shopko-stores-inc:
 
 simtropolis/30836-hippotank-demand-fix:
   packageId: hippotank/ht-demand-fix
+  variantId: default
+
+simtropolis/30846-midrise-office-pack-volume-6:
+  packageId: madhatter106/midrise-office-pack-vol06
   variantId: default
 
 simtropolis/30864-burger-king-v20:
