--- a/src/scripts/data/assets/index.yaml
+++ b/src/scripts/data/assets/index.yaml
@@ -3077,6 +3077,8 @@ buildings:
     - 11241036/seasonal-woods
   c2ab5f77:
     - csx/mega-props-vol05
+  c31764d3:
+    - jasoncw/hook-and-ladder-company-8
   c38ed872:
     - dead-end/norrkoping-clinic
   c3f365cc:
@@ -5888,6 +5890,8 @@ lots:
     - 11241036/seasonal-woods
   c26d31ce:
     - wannglondon/american-rowhomes-pack-1
+  c31764d3:
+    - jasoncw/hook-and-ladder-company-8
   c33a5828:
     - madhatter106/midrise-office-pack-vol06
   c33a5864:
