--- a/src/scripts/data/assets/simtropolis/112-gameplay-mods.yaml
+++ b/src/scripts/data/assets/simtropolis/112-gameplay-mods.yaml
@@ -10339,6 +10339,15 @@ assets:
     name: Submenus For The atsf189 Air Logistics Centers
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_2024_10/670d5983ee612_AirLogisticsCentersSubmenu.thumb.jpg.519a5ebb734e1d78da63ba740323c544.jpg
     url: https://community.simtropolis.com/files/file/36504-submenus-for-the-atsf189-air-logistics-centers/
+  simtropolis/36609:
+    assetId: simtropolis/36609-unlimited-tax
+    authors:
+      - Jidan
+    category: 112-gameplay-mods
+    lastModified: 2024-12-18T12:10:13.000Z
+    name: Unlimited Tax
+    thumbnail: https://www.simtropolis.com/objects/screens/monthly_2024_12/6762bba5a29b5_Screenshot2024-12-18190202.thumb.png.b0a9cfd84f71090fa3f85e03059ed014.png
+    url: https://community.simtropolis.com/files/file/36609-unlimited-tax/
   simtropolis/4243:
     assetId: simtropolis/4243-rci-query-upgrade-mod
     authors:
@@ -10359,4 +10368,4 @@ assets:
     url: https://community.simtropolis.com/files/file/4536-daeleys-present/
 
 meta:
-  timestamp: 2024-12-18T09:34:56.459Z
+  timestamp: 2024-12-19T08:48:47.951Z
