Fix Simtropolis login

--- a/.env.local.example
+++ b/.env.local.example
@@ -23,10 +23,10 @@ SIMTROPOLIS_IPS4_MEMBER_ID=""
 
 # Absolute path to indexer downloads
 INDEXER_DOWNLOADS_PATH=""
-INDEXER_DOWNLOADS_TEMP_PATH="D:\loicn\Documents\SimCity 4\Manager\~temp\Downloads"
+INDEXER_DOWNLOADS_TEMP_PATH=""
 
 # Absolute path to SimCity 4
-INDEXER_GAME_PATH="D:\Program Files (x86)\Steam\steamapps\common\SimCity 4 Deluxe"
+INDEXER_GAME_PATH=""
 
 # Absolute path to indexer tools
 INDEXER_EXE_PATH_CICDEC=""
