--- a/src/scripts/data/assets/overrides.yaml
+++ b/src/scripts/data/assets/overrides.yaml
@@ -3544,6 +3544,10 @@ simtropolis/36612-hook-and-ladder-company-8-ghostbusters-hq:
       packageId: jasoncw/hook-and-ladder-company-8
       variantId: darknite
 
+simtropolis/36614-extended-terrain-dll:
+  packageId: null-45/extended-terrain-dll
+  variantId: default
+
 simtropolis/4049-vda-langeraar-geerweg-31:
   packageId: vanderaap/langeraar-geerweg-31
 
