--- a/src/scripts/data/assets/simtropolis/108-parks-plazas.yaml
+++ b/src/scripts/data/assets/simtropolis/108-parks-plazas.yaml
@@ -27928,367 +27928,367 @@ assets:
       PC Towering Sign Set 1/PC Towering Sign Set (lots only)/PLOP_1x1_BaymontSign_29944b81.SC4Lot:
         29944b81:
           menu: Parks
-          model: 00000000-0000
+          model: null
           name: KOSC_Superparking_Pavement_Filler
       PC Towering Sign Set 1/PC Towering Sign Set (lots only)/PLOP_1x1_BudgetHostSign_a9985f48.SC4Lot:
         a9985f48:
           menu: Parks
-          model: 00000000-0000
+          model: null
           name: KOSC_Superparking_Pavement_Filler
       PC Towering Sign Set 1/PC Towering Sign Set (lots only)/PLOP_1x1_Comfort Inn Sign_e99303a2.SC4Lot:
         e99303a2:
           menu: Parks
-          model: 00000000-0000
+          model: null
           name: KOSC_Superparking_Pavement_Filler
       PC Towering Sign Set 1/PC Towering Sign Set (lots only)/PLOP_1x1_Econo Lodge Sign_e99303ba.SC4Lot:
         e99303ba:
           menu: Parks
-          model: 00000000-0000
+          model: null
           name: KOSC_Superparking_Pavement_Filler
       PC Towering Sign Set 1/PC Towering Sign Set (lots only)/PLOP_1x1_ExtendedStaySign_c9a2ec24.SC4Lot:
         c9a2ec24:
           menu: Parks
-          model: 00000000-0000
+          model: null
           name: KOSC_Superparking_Pavement_Filler
       PC Towering Sign Set 1/PC Towering Sign Set (lots only)/PLOP_1x1_HoJoSign_89994f69.SC4Lot:
         89994f69:
           menu: Parks
-          model: 00000000-0000
+          model: null
           name: KOSC_Superparking_Pavement_Filler
       PC Towering Sign Set 1/PC Towering Sign Set (lots only)/PLOP_1x1_Knights Inn Sign Tall_29a3a033.SC4Lot:
         29a3a033:
           menu: Parks
-          model: 00000000-0000
+          model: null
           name: KOSC_Superparking_Pavement_Filler
       PC Towering Sign Set 1/PC Towering Sign Set (lots only)/PLOP_1x1_La Quinta Sign Tall_29a39b91.SC4Lot:
         29a39b91:
           menu: Parks
-          model: 00000000-0000
+          model: null
           name: KOSC_Superparking_Pavement_Filler
       PC Towering Sign Set 1/PC Towering Sign Set (lots only)/PLOP_1x1_MerryweatherSign_c9944b49.SC4Lot:
         c9944b49:
           menu: Parks
-          model: 00000000-0000
+          model: null
           name: KOSC_Superparking_Pavement_Filler
       PC Towering Sign Set 1/PC Towering Sign Set (lots only)/PLOP_1x1_MicrotelSign_09985f36.SC4Lot:
         09985f36:
           menu: Parks
-          model: 00000000-0000
+          model: null
           name: KOSC_Superparking_Pavement_Filler
       PC Towering Sign Set 1/PC Towering Sign Set (lots only)/PLOP_1x1_PC AmericInn Sign_c9a39bb5.SC4Lot:
         c9a39bb5:
           menu: Parks
-          model: 00000000-0000
+          model: null
           name: KOSC_Superparking_Pavement_Filler
       PC Towering Sign Set 1/PC Towering Sign Set (lots only)/PLOP_1x1_PC711SignTallNew_499c463f.SC4Lot:
         499c463f:
           menu: Parks
-          model: 00000000-0000
+          model: null
           name: KOSC_Superparking_Grass_Filler
       PC Towering Sign Set 1/PC Towering Sign Set (lots only)/PLOP_1x1_PC76Sign_89a58b16.SC4Lot:
         89a58b16:
           menu: Parks
-          model: 00000000-0000
+          model: null
           name: KOSC_Superparking_Grass_Filler
       PC Towering Sign Set 1/PC Towering Sign Set (lots only)/PLOP_1x1_PCAlonSign_69a2ebfe.SC4Lot:
         69a2ebfe:
           menu: Parks
-          model: 00000000-0000
+          model: null
           name: KOSC_Superparking_Grass_Filler
       PC Towering Sign Set 1/PC Towering Sign Set (lots only)/PLOP_1x1_PCApplebeesSign_e9a1a473.SC4Lot:
         e9a1a473:
           menu: Parks
-          model: 00000000-0000
+          model: null
           name: KOSC_Superparking_Grass_Filler
       PC Towering Sign Set 1/PC Towering Sign Set (lots only)/PLOP_1x1_PCBKSign_e9992f93.SC4Lot:
         e9992f93:
           menu: Parks
-          model: 00000000-0000
+          model: null
           name: KOSC_Superparking_Grass_Filler
       PC Towering Sign Set 1/PC Towering Sign Set (lots only)/PLOP_1x1_PCBPSignPre2001_a9a58af5.SC4Lot:
         a9a58af5:
           menu: Parks
-          model: 00000000-0000
+          model: null
           name: KOSC_Superparking_Grass_Filler
       PC Towering Sign Set 1/PC Towering Sign Set (lots only)/PLOP_1x1_PCBigBoySign_a99da62d.SC4Lot:
         a99da62d:
           menu: Parks
-          model: 00000000-0000
+          model: null
           name: KOSC_Superparking_Grass_Filler
       PC Towering Sign Set 1/PC Towering Sign Set (lots only)/PLOP_1x1_PCBobEvansSign_c9a1a45b.SC4Lot:
         c9a1a45b:
           menu: Parks
-          model: 00000000-0000
+          model: null
           name: KOSC_Superparking_Grass_Filler
       PC Towering Sign Set 1/PC Towering Sign Set (lots only)/PLOP_1x1_PCCaptainDSign_a99da6a3.SC4Lot:
         a99da6a3:
           menu: Parks
-          model: 00000000-0000
+          model: null
           name: KOSC_Superparking_Grass_Filler
       PC Towering Sign Set 1/PC Towering Sign Set (lots only)/PLOP_1x1_PCCenexSign_89a1a4a5.SC4Lot:
         89a1a4a5:
           menu: Parks
-          model: 00000000-0000
+          model: null
           name: KOSC_Superparking_Grass_Filler
       PC Towering Sign Set 1/PC Towering Sign Set (lots only)/PLOP_1x1_PCChevronSign_a99986a2.SC4Lot:
         a99986a2:
           menu: Parks
-          model: 00000000-0000
+          model: null
           name: KOSC_Superparking_Grass_Filler
       PC Towering Sign Set 1/PC Towering Sign Set (lots only)/PLOP_1x1_PCChipotleSign_49994f47.SC4Lot:
         49994f47:
           menu: Parks
-          model: 00000000-0000
+          model: null
           name: KOSC_Superparking_Grass_Filler
       PC Towering Sign Set 1/PC Towering Sign Set (lots only)/PLOP_1x1_PCClarkSign_09a2ebbf.SC4Lot:
         09a2ebbf:
           menu: Parks
-          model: 00000000-0000
+          model: null
           name: KOSC_Superparking_Grass_Filler
       PC Towering Sign Set 1/PC Towering Sign Set (lots only)/PLOP_1x1_PCCrackerBarrelSign_099986cb.SC4Lot:
         099986cb:
           menu: Parks
-          model: 00000000-0000
+          model: null
           name: KOSC_Superparking_Grass_Filler
       PC Towering Sign Set 1/PC Towering Sign Set (lots only)/PLOP_1x1_PCDennysign_29a6e15a.SC4Lot:
         29a6e15a:
           menu: Parks
-          model: 00000000-0000
+          model: null
           name: KOSC_Superparking_Grass_Filler
       PC Towering Sign Set 1/PC Towering Sign Set (lots only)/PLOP_1x1_PCFredMeyerSign_29a2ebd1.SC4Lot:
         29a2ebd1:
           menu: Parks
-          model: 00000000-0000
+          model: null
           name: KOSC_Superparking_Grass_Filler
       PC Towering Sign Set 1/PC Towering Sign Set (lots only)/PLOP_1x1_PCGoldStarSign_49a44709.SC4Lot:
         49a44709:
           menu: Parks
-          model: 00000000-0000
+          model: null
           name: KOSC_Superparking_Grass_Filler
       PC Towering Sign Set 1/PC Towering Sign Set (lots only)/PLOP_1x1_PCGoldenCorralSign_a99aecb0.SC4Lot:
         a99aecb0:
           menu: Parks
-          model: 00000000-0000
+          model: null
           name: KOSC_Superparking_Grass_Filler
       PC Towering Sign Set 1/PC Towering Sign Set (lots only)/PLOP_1x1_PCHomeDepotSign_499c4658.SC4Lot:
         499c4658:
           menu: Parks
-          model: 00000000-0000
+          model: null
           name: KOSC_Superparking_Grass_Filler
       PC Towering Sign Set 1/PC Towering Sign Set (lots only)/PLOP_1x1_PCHuddleHouseSign_a9a58b2d.SC4Lot:
         a9a58b2d:
           menu: Parks
-          model: 00000000-0000
+          model: null
           name: KOSC_Superparking_Grass_Filler
       PC Towering Sign Set 1/PC Towering Sign Set (lots only)/PLOP_1x1_PCIHOPSign_499da684.SC4Lot:
         499da684:
           menu: Parks
-          model: 00000000-0000
+          model: null
           name: KOSC_Superparking_Grass_Filler
       PC Towering Sign Set 1/PC Towering Sign Set (lots only)/PLOP_1x1_PCJackSign_a99c467f.SC4Lot:
         a99c467f:
           menu: Parks
-          model: 00000000-0000
+          model: null
           name: KOSC_Superparking_Grass_Filler
       PC Towering Sign Set 1/PC Towering Sign Set (lots only)/PLOP_1x1_PCKFCSignNew_c99c4670.SC4Lot:
         c99c4670:
           menu: Parks
-          model: 00000000-0000
+          model: null
           name: KOSC_Superparking_Grass_Filler
       PC Towering Sign Set 1/PC Towering Sign Set (lots only)/PLOP_1x1_PCKFCSign_c9994eff.SC4Lot:
         c9994eff:
           menu: Parks
-          model: 00000000-0000
+          model: null
           name: KOSC_Superparking_Grass_Filler
       PC Towering Sign Set 1/PC Towering Sign Set (lots only)/PLOP_1x1_PCKrogerSign_89994f34.SC4Lot:
         89994f34:
           menu: Parks
-          model: 00000000-0000
+          model: null
           name: KOSC_Superparking_Grass_Filler
       PC Towering Sign Set 1/PC Towering Sign Set (lots only)/PLOP_1x1_PCKwikTripSign_49a1a487.SC4Lot:
         49a1a487:
           menu: Parks
-          model: 00000000-0000
+          model: null
           name: KOSC_Superparking_Grass_Filler
       PC Towering Sign Set 1/PC Towering Sign Set (lots only)/PLOP_1x1_PCLowesSign_29a39bf9.SC4Lot:
         29a39bf9:
           menu: Parks
-          model: 00000000-0000
+          model: null
           name: KOSC_Superparking_Grass_Filler
       PC Towering Sign Set 1/PC Towering Sign Set (lots only)/PLOP_1x1_PCMarathonSign_8999159f.SC4Lot:
         8999159f:
           menu: Parks
-          model: 00000000-0000
+          model: null
           name: KOSC_Superparking_Grass_Filler
       PC Towering Sign Set 1/PC Towering Sign Set (lots only)/PLOP_1x1_PCMotel6SignTall_e9a2ebe7.SC4Lot:
         e9a2ebe7:
           menu: Parks
-          model: 00000000-0000
+          model: null
           name: KOSC_Superparking_Grass_Filler
       PC Towering Sign Set 1/PC Towering Sign Set (lots only)/PLOP_1x1_PCOutbackSign_69a44658.SC4Lot:
         69a44658:
           menu: Parks
-          model: 00000000-0000
+          model: null
           name: KOSC_Superparking_Grass_Filler
       PC Towering Sign Set 1/PC Towering Sign Set (lots only)/PLOP_1x1_PCPerkinsSign_e9a44675.SC4Lot:
         e9a44675:
           menu: Parks
-          model: 00000000-0000
+          model: null
           name: KOSC_Superparking_Grass_Filler
       PC Towering Sign Set 1/PC Towering Sign Set (lots only)/PLOP_1x1_PCPhillips66Sign_a9a1a435.SC4Lot:
         a9a1a435:
           menu: Parks
-          model: 00000000-0000
+          model: null
           name: KOSC_Superparking_Grass_Filler
       PC Towering Sign Set 1/PC Towering Sign Set (lots only)/PLOP_1x1_PCPizzaHutSign1_89992f61.SC4Lot:
         89992f61:
           menu: Parks
-          model: 00000000-0000
+          model: null
           name: KOSC_Superparking_Grass_Filler
       PC Towering Sign Set 1/PC Towering Sign Set (lots only)/PLOP_1x1_PCPizzaHutSign2_89992f70.SC4Lot:
         89992f70:
           menu: Parks
-          model: 00000000-0000
+          model: null
           name: KOSC_Superparking_Grass_Filler
       PC Towering Sign Set 1/PC Towering Sign Set (lots only)/PLOP_1x1_PCQTsign_499915d1.SC4Lot:
         499915d1:
           menu: Parks
-          model: 00000000-0000
+          model: null
           name: KOSC_Superparking_Grass_Filler
       PC Towering Sign Set 1/PC Towering Sign Set (lots only)/PLOP_1x1_PCRoyRogersSign_c99986f0.SC4Lot:
         c99986f0:
           menu: Parks
-          model: 00000000-0000
+          model: null
           name: KOSC_Superparking_Grass_Filler
       PC Towering Sign Set 1/PC Towering Sign Set (lots only)/PLOP_1x1_PCSNSSign_e99ac312.SC4Lot:
         e99ac312:
           menu: Parks
-          model: 00000000-0000
+          model: null
           name: KOSC_Superparking_Grass_Filler
       PC Towering Sign Set 1/PC Towering Sign Set (lots only)/PLOP_1x1_PCSheetzsign_499915e6.SC4Lot:
         '499915e6':
           menu: Parks
-          model: 00000000-0000
+          model: null
           name: KOSC_Superparking_Grass_Filler
       PC Towering Sign Set 1/PC Towering Sign Set (lots only)/PLOP_1x1_PCShellSign_a999868d.SC4Lot:
         a999868d:
           menu: Parks
-          model: 00000000-0000
+          model: null
           name: KOSC_Superparking_Grass_Filler
       PC Towering Sign Set 1/PC Towering Sign Set (lots only)/PLOP_1x1_PCShoneysSign_499af18f.SC4Lot:
         499af18f:
           menu: Parks
-          model: 00000000-0000
+          model: null
           name: KOSC_Superparking_Grass_Filler
       PC Towering Sign Set 1/PC Towering Sign Set (lots only)/PLOP_1x1_PCSinclairSign_099ac325.SC4Lot:
         099ac325:
           menu: Parks
-          model: 00000000-0000
+          model: null
           name: KOSC_Superparking_Grass_Filler
       PC Towering Sign Set 1/PC Towering Sign Set (lots only)/PLOP_1x1_PCSkylineSign_49a446d5.SC4Lot:
         49a446d5:
           menu: Parks
-          model: 00000000-0000
+          model: null
           name: KOSC_Superparking_Grass_Filler
       PC Towering Sign Set 1/PC Towering Sign Set (lots only)/PLOP_1x1_PCSonicSign_299c46bb.SC4Lot:
         299c46bb:
           menu: Parks
-          model: 00000000-0000
+          model: null
           name: KOSC_Superparking_Grass_Filler
       PC Towering Sign Set 1/PC Towering Sign Set (lots only)/PLOP_1x1_PCSpeedwaySign_49985f0c.SC4Lot:
         49985f0c:
           menu: Parks
-          model: 00000000-0000
+          model: null
           name: KOSC_Superparking_Grass_Filler
       PC Towering Sign Set 1/PC Towering Sign Set (lots only)/PLOP_1x1_PCStarbucksSign_09a6e142.SC4Lot:
         09a6e142:
           menu: Parks
-          model: 00000000-0000
+          model: null
           name: KOSC_Superparking_Grass_Filler
       PC Towering Sign Set 1/PC Towering Sign Set (lots only)/PLOP_1x1_PCStuckeysSign_a9a1a449.SC4Lot:
         a9a1a449:
           menu: Parks
-          model: 00000000-0000
+          model: null
           name: KOSC_Superparking_Grass_Filler
       PC Towering Sign Set 1/PC Towering Sign Set (lots only)/PLOP_1x1_PCTacoBellSign_099af13c.SC4Lot:
         099af13c:
           menu: Parks
-          model: 00000000-0000
+          model: null
           name: KOSC_Superparking_Grass_Filler
       PC Towering Sign Set 1/PC Towering Sign Set (lots only)/PLOP_1x1_PCTexacoSign_a99986b8.SC4Lot:
         a99986b8:
           menu: Parks
-          model: 00000000-0000
+          model: null
           name: KOSC_Superparking_Grass_Filler
       PC Towering Sign Set 1/PC Towering Sign Set (lots only)/PLOP_1x1_PCThorntonsSign_49a39bdf.SC4Lot:
         49a39bdf:
           menu: Parks
-          model: 00000000-0000
+          model: null
           name: KOSC_Superparking_Grass_Filler
       PC Towering Sign Set 1/PC Towering Sign Set (lots only)/PLOP_1x1_PCTimHortonsSign_899c54ee.SC4Lot:
         899c54ee:
           menu: Parks
-          model: 00000000-0000
+          model: null
           name: KOSC_Superparking_Grass_Filler
       PC Towering Sign Set 1/PC Towering Sign Set (lots only)/PLOP_1x1_PCValeroSign_299c469d.SC4Lot:
         299c469d:
           menu: Parks
-          model: 00000000-0000
+          model: null
           name: KOSC_Superparking_Grass_Filler
       PC Towering Sign Set 1/PC Towering Sign Set (lots only)/PLOP_1x1_PCVillageInnSign_499aecc7.SC4Lot:
         499aecc7:
           menu: Parks
-          model: 00000000-0000
+          model: null
           name: KOSC_Superparking_Grass_Filler
       PC Towering Sign Set 1/PC Towering Sign Set (lots only)/PLOP_1x1_PCWaffleHouseSign_499da669.SC4Lot:
         499da669:
           menu: Parks
-          model: 00000000-0000
+          model: null
           name: KOSC_Superparking_Grass_Filler
       PC Towering Sign Set 1/PC Towering Sign Set (lots only)/PLOP_1x1_PCWalmartSign_89994f21.SC4Lot:
         89994f21:
           menu: Parks
-          model: 00000000-0000
+          model: null
           name: KOSC_Superparking_Grass_Filler
       PC Towering Sign Set 1/PC Towering Sign Set (lots only)/PLOP_1x1_PCWendysSign_89994ede.SC4Lot:
         89994ede:
           menu: Parks
-          model: 00000000-0000
+          model: null
           name: KOSC_Superparking_Grass_Filler
       PC Towering Sign Set 1/PC Towering Sign Set (lots only)/PLOP_1x1_Pear Tree by Drury Sign_69944b9c.SC4Lot:
         69944b9c:
           menu: Parks
-          model: 00000000-0000
+          model: null
           name: KOSC_Superparking_Pavement_Filler
       PC Towering Sign Set 1/PC Towering Sign Set (lots only)/PLOP_1x1_Quality Inn Sign_499303ce.SC4Lot:
         499303ce:
           menu: Parks
-          model: 00000000-0000
+          model: null
           name: KOSC_Superparking_Pavement_Filler
       PC Towering Sign Set 1/PC Towering Sign Set (lots only)/PLOP_1x1_Ramada Sign_099aec75.SC4Lot:
         099aec75:
           menu: Parks
-          model: 00000000-0000
+          model: null
           name: KOSC_Superparking_Pavement_Filler
       PC Towering Sign Set 1/PC Towering Sign Set (lots only)/PLOP_1x1_RedCarpetSign_e9985f63.SC4Lot:
         e9985f63:
           menu: Parks
-          model: 00000000-0000
+          model: null
           name: KOSC_Superparking_Pavement_Filler
       PC Towering Sign Set 1/PC Towering Sign Set (lots only)/PLOP_1x1_RhoadsSign_49944b3a.SC4Lot:
         49944b3a:
           menu: Parks
-          model: 00000000-0000
+          model: null
           name: KOSC_Superparking_Pavement_Filler
       PC Towering Sign Set 1/PC Towering Sign Set (lots only)/PLOP_1x1_Rodeway Inn Sign_699303e5.SC4Lot:
         '699303e5':
           menu: Parks
-          model: 00000000-0000
+          model: null
           name: KOSC_Superparking_Pavement_Filler
       PC Towering Sign Set 1/PC Towering Sign Set (lots only)/PLOP_1x1_Sleep Inn Sign_499303fa.SC4Lot:
         499303fa:
           menu: Parks
-          model: 00000000-0000
+          model: null
           name: KOSC_Superparking_Pavement_Filler
     category: 108-parks-plazas
     dependencies:
@@ -31558,7 +31558,7 @@ assets:
               label: Albee Amphitheater
               maintenance: 30
               menu: Parks
-              model: 00000000-0000
+              model: null
               name: Jasoncw - Albee Amphitheater
               pollution: 4294967295
               relief:
@@ -31609,7 +31609,7 @@ assets:
               label: Albee Amphitheater
               maintenance: 30
               menu: Parks
-              model: 00000000-0000
+              model: null
               name: Jasoncw - Albee Amphitheater
               pollution: 4294967295
               relief:
@@ -31858,7 +31858,7 @@ assets:
           cost: 470
           maintenance: 60
           menu: Parks
-          model: 00000000-0000
+          model: null
           name: Jasoncw - Dreieck Park (PZ3x3)
           pollution: 4294967278
           pollutionRadius: 6
@@ -35283,4 +35283,4 @@ assets:
     url: https://community.simtropolis.com/files/file/998-large-park/
 
 meta:
-  timestamp: 2024-12-19T08:48:47.951Z
+  timestamp: 2024-12-20T07:29:40.552Z
